fix overflow

--- a/kifi-backend/modules/shoebox/angular/src/libraries/library.styl
+++ b/kifi-backend/modules/shoebox/angular/src/libraries/library.styl
@@ -23,7 +23,9 @@
   .kf-keep-lib-name-container
     display: inline-block
     width: calc(100% - 80px)
-    height: 77px
+    height: 60px
+    margin-top: 8px
+    margin-bottom: 9px
     vertical-align: top
     overflow: hidden
 
